methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:12: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
  setCouleurBrosse();faireV(Color.YELLOW)
                  ^MethodsPicture:13: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  faireV();faireV();faireV();
        ^MethodsPicture:13: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  faireV();faireV();faireV();
                 ^MethodsPicture:13: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  faireV();faireV();faireV();
                          ^