methods.picture.MethodsPicture.scala.code
override def run() {
  ligne()

}


def faireV(c:Color){ avance();baisseBrosse();leveBrosse();gauche();avance();droite();avance();baisseBrosse();leveBrosse();avance();droite();avance();gauche();baisseBrosse();leveBrosse();avance();gauche();
}

def ligne(){
  
  setCouleurBrosse();faireV(Color.YELLOW)
  faireV();faireV();faireV();
}